# t42_hand

./: README.md  figures_icra21shuo.docx  icra20_9_7.docx  reacher_aip_notes_(done).txt
beliefspaceplanning/rollout_node/: CMakeLists.txt
bowen_pose_estimate/: CMakeLists.txt  config.yaml  imgui.ini  package.xml
bowen_pose_estimate/include/: ConfigParser.h  PoseEstimate.h  Utils.h
bowen_pose_estimate/launch/: run_multiface_pose.launch  run_pose.launch  run_realsense.launch
bowen_pose_estimate/msg/: multifacePose.msg
bowen_pose_estimate/src/: ConfigParser.cpp  PoseEstimate.cpp  Utils.cpp  main.cpp  multifacePose.cpp
bowen_pose_estimate/srv/: getMultifacePose.srv  recordHandPose.srv
data_process_and_train/: avi_data_process_v0.ipynb  avi_predict.ipynb  avi_predict_script  avi_train.py  data_process.ipynb  del.py  mridul_check_predict.ipynb  predict.ipynb  predict.py  predict_script  process.ipynb  process.py  process_params.py  process_v1.6.py  process_v1.7.py  process_v1.8.py  process_v1.py  real_notes.txt  smooth_data_process.ipynb  smooth_data_process.py  train.ipynb  train.py  vis.ipynb
data_process_and_train/.ipynb_checkpoints/: avi_data_process_v0-checkpoint.ipynb  avi_data_process_v0_need_adapt-checkpoint.ipynb  avi_predict-checkpoint.py  avi_process_v0_need_adapt-checkpoint.py  avi_train-checkpoint.py  data_process-checkpoint.ipynb  meeting_1-checkpoint.ipynb  meeting_2_v1.7-checkpoint.ipynb  mridul_process_v1-checkpoint.py  mridul_smooth_data_process-checkpoint.ipynb  mridul_smooth_data_process-checkpoint.py  no_correct_z_show_traj-checkpoint.ipynb  predict_script_2-checkpoint  process-checkpoint.py  process_v1.6-checkpoint.py  process_v1.7-checkpoint.py  process_v1.8-checkpoint.py  real_notes-checkpoint.txt  smooth_data_process-checkpoint.ipynb  smooth_data_process-checkpoint.py  train-checkpoint.ipynb  train-checkpoint.py  vis-checkpoint.py
data_process_and_train/common/: TrajNet.py  utils_clean_traj.py
data_process_and_train/meeting_1/: Shuo_Progress_0306.docx
data_process_and_train/meeting_2/: meeting_2.pptx
icra22/: figures_icra22shuo.docx
icra22/meeting/: icra22_0715meeting.txt  icra22_0723meeting.txt  icra22_0811meeting.txt  icra22_0818meeting.txt  icra22_before_0811_meeting.txt  meeting0723.pptx  meeting0811.pptx  meeting0820.pptx
t42_control/hand_control/: CMakeLists.txt
t42_control/marker_track/: CMakeLists.txt  package.xml
t42_control/rollout_t42/: CMakeLists.txt
zs_sim_robot/: MUJOCO_LOG.TXT  acs.txt  aip_alpha_tune.ipynb  aip_run.py  astar.ipynb  astar.py  astar_gazebo_ah-Copy1.ipynb  astar_gazebo_ah.ipynb  astar_gazebo_ah_ho.py  astar_mjo.ipynb  astar_mjo_ho.py  astar_reah_ah.ipynb  astar_real_ah.ipynb  convert_pkl.py  corl_lqr_reacher.py  corl_rollout_mjo.py  gazebo_ah_train.py  get_linear_model_lqr_from_astar.ipynb  get_lqr_abk_from_astar.ipynb  logger.py  policy_and_aip_mjo_ho.ipynb  policy_gazebo_ah_OBS.ipynb  policy_gazebo_ah_OBS_w+o_ho.ipynb  policy_gazebo_ah_noOBS_w+o_ho.ipynb  policy_mjo.ipynb  policy_real_ah.ipynb  ppo2_and_aip_loss_viz.ipynb  ppo2_loss_viz.ipynb  ppo2_run.py  predict.ipynb  predict_gazebo_ah.ipynb  run.py  test.txt  vis_gazebo_reacher_0.1_model_prediction.ipynb
zs_sim_robot/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  aip_alpha_tune-checkpoint.ipynb  astar-Copy1-checkpoint.ipynb  astar-checkpoint.ipynb  astar-checkpoint.py  astar_gazebo_ah-checkpoint.ipynb  astar_gazebo_ah_ho-checkpoint.py  astar_mjo-checkpoint.ipynb  astar_mjo_ho-checkpoint.py  astar_real_ah-checkpoint.ipynb  corl_rollout_mjo-checkpoint.py  get_linear_model_lqr_from_astar-checkpoint.ipynb  get_lqr_abk_from_astar-checkpoint.ipynb  policy_and_aip_mjo_ho-checkpoint.ipynb  policy_gazebo_ah_OBS-checkpoint.ipynb  policy_gazebo_ah_OBS_w+o_ho-checkpoint.ipynb  policy_mjo-checkpoint.ipynb  policy_mjo_ho-checkpoint.ipynb  policy_real_ah-checkpoint.ipynb  ppo2_and_aip_loss_viz-checkpoint.ipynb  predict-checkpoint.ipynb  predict_gazebo_ah-checkpoint.ipynb  test-checkpoint.txt
zs_sim_robot/a2c/: utils.py
zs_sim_robot/bench/: __init__.py  monitor.py
zs_sim_robot/common/: TrajNet.py  __init__.py  ah_env.py  ah_gazebo_env.py  cmd_util.py  corl_acrobot_env.py  corl_reacher_env.py  dataset.py  distributions.py  distributions_aip.py  input.py  models.py  mpi_adam.py  mpi_running_mean_std.py  plot_util.py  plotting.py  policies.py  policies_aip.py  pt_build_model.py  real_ah_env.py  retro_wrappers.py  runners.py  running_mean_std.py  tf_util.py  utils_clean_traj.py  utils_clean_traj_bias.py
zs_sim_robot/lqr_coef/: astar_Acrobot-v1_goal1_A  astar_Acrobot-v1_goal1_B  astar_ho0.999_Reacher-v2_goal1_A  astar_ho0.999_Reacher-v2_goal1_B  astar_ho0.999_Reacher-v2_goal2_A  astar_ho0.999_Reacher-v2_goal2_B  astar_ho0.999_Reacher-v2_goal5_A  astar_ho0.999_Reacher-v2_goal5_B  astar_ho0.999_gazebo_ah_set20c_goal0_A  astar_ho0.999_gazebo_ah_set20c_goal0_B  astar_ho0.999_gazebo_ah_set20c_goal15_A  astar_ho0.999_gazebo_ah_set20c_goal15_B  astar_ho0.999_gazebo_ah_set20c_goal2_A  astar_ho0.999_gazebo_ah_set20c_goal2_B  astar_ho0.999_gazebo_ah_set20c_goal7_A  astar_ho0.999_gazebo_ah_set20c_goal7_B  astar_ho0.999_gazebo_ah_set20c_goal8_A  astar_ho0.999_gazebo_ah_set20c_goal8_B  astar_ho0.999_set20c_goal0_A  astar_ho0.999_set20c_goal0_B  astar_ho0.999_set20c_goal15_A  astar_ho0.999_set20c_goal15_B  astar_ho0.999_set20c_goal2_A  astar_ho0.999_set20c_goal2_B  (+12 more)
(+875 files in other folders)
